pkp/pln#50 Review Changes added

--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -303,3 +303,6 @@ msgstr "It might take several days for a deposit to be fully processed."
 msgid "plugins.generic.pln.status.latestupdate"
 msgstr "Latest Update"
 
+msgid "plugins.generic.pln.status.description.title"
+msgstr "Status Description"
+
