--- a/locale/ar_IQ/locale.po
+++ b/locale/ar_IQ/locale.po
@@ -1,15 +1,20 @@
+# Salam Al-Khammasi <salam.alshemmari@uokufa.edu.iq>, 2023.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
+"PO-Revision-Date: 2023-02-09 20:48+0000\n"
+"Last-Translator: Salam Al-Khammasi <salam.alshemmari@uokufa.edu.iq>\n"
+"Language-Team: Arabic <http://translate.pkp.sfu.ca/projects/plugins/pln/"
+"ar_IQ/>\n"
+"Language: ar_IQ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
-"PO-Revision-Date: 2020-03-03T23:08:22+00:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
+"&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
+"X-Generator: Weblate 4.13.1\n"
 
 msgid "plugins.generic.pln"
 msgstr "إضافة مشروع المعرفة العامة PLN"
@@ -18,7 +23,7 @@ msgid "plugins.generic.pln.description"
 msgstr "إن إضافة مشروع المعرفة العامة PKP PN ستقوم بإيداع محتوياتك المنشورة في شبكة LOCKSS الخاصة من أجل الحفاظ عليها."
 
 msgid "plugins.generic.pln.manager.setup.description"
-msgstr "<strong>الشبكة الخاصة لمشروع المعرفة العامة LOCKSS</strong><br /><br />لطفاً، إقرأ <a href=\"https://pkp.sfu.ca/pkp-lockss/\" target=\"_blank\">نظرة عامة على PKP PN لمشروع المعرفة العامة</a> ومن ثم أكمل <a href=\"{$plnPluginURL}\">هذا النموذج البسيط</a>. هذا الخيار سيمكنك من تضمين مجلتك في الشبكة الاصة لمشروع المعرفة العامة LOCKSS (PKP PLN)."
+msgstr "<strong>الشبكة الخاصة لمشروع المعرفة العامة LOCKSS</strong><br /><br />لطفاً، إقرأ <a href=\"https://pkp.sfu.ca/pkp-pn/\" target=\"_blank\">نظرة عامة على PKP PN لمشروع المعرفة العامة</a> ومن ثم أكمل <a href=\"{$plnPluginURL}\">هذا النموذج البسيط</a>. هذا الخيار سيمكنك من تضمين مجلتك في الشبكة الاصة لمشروع المعرفة العامة LOCKSS (PKP PLN)."
 
 msgid "plugins.generic.pln.enabled"
 msgstr "إن إضافة PKP PN لمشروع المعرفة العامة قد تم تمكينها."
@@ -30,7 +35,8 @@ msgid "plugins.generic.pln.settings"
 msgstr "الإعدادات"
 
 msgid "plugins.generic.pln.settings.acron_required"
-msgstr "إن إضافة PKP PN تتطلب وجود إضافة Acron أو تواجد أداة جدولة دورية مثل 'cron.'"
+msgstr ""
+"إن إضافة PKP PN تتطلب وجود إضافة Acron أو تواجد أداة جدولة دورية مثل 'cron'."
 
 msgid "plugins.generic.pln.settings.saved"
 msgstr "تم حفظ إعدادات PKP PN لمشروع المعرفة العامة."
@@ -244,3 +250,105 @@ msgstr "بوابة PLN"
 
 msgid "plugins.generic.plngateway.description"
 msgstr "يقدم تقارير عن موقف PKP PN مع عناوين المؤلفات الأخيرة إلى الملقم المرحلي."
+
+msgid "plugins.generic.pln.status.description.title"
+msgstr "وصف الحالة"
+
+msgid "plugins.generic.pln.status.latestupdate"
+msgstr "التحديث الأخير"
+
+msgid "plugins.generic.pln.status.warning"
+msgstr "قد تستغرق عملية الإيداع بشكلها الكامل عدة أيام."
+
+msgid "plugins.generic.pln.displayedstatus.error.description"
+msgstr "وقع خطأ يتعلق بعملية الإيداع"
+
+msgid "plugins.generic.pln.displayedstatus.error"
+msgstr "خطأ"
+
+msgid "plugins.generic.pln.displayedstatus.completed.description"
+msgstr "إكتملت عملية الإيداع"
+
+msgid "plugins.generic.pln.displayedstatus.completed"
+msgstr "إكتملت"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress.description"
+msgstr "عملية الإيداع قيد التنفيذ"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress"
+msgstr "قيد التنفيذ"
+
+msgid "plugins.generic.pln.displayedstatus.pending.description"
+msgstr "عملية الإيداع لم تبدأ بعد"
+
+msgid "plugins.generic.pln.displayedstatus.pending"
+msgstr "قيد الانتظار"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageSucceeded"
+msgstr "نجح رزم الإيداع {$depositId}"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageFailed"
+msgstr "رزم الإيداع {$depositId} قد فشل"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.error"
+msgstr ""
+"إضافة الاستيراد/التصدير المحلية فشلت مع الإيداع {$depositId}، عند محاولتها "
+"تنفيذ الرزم"
+
+msgid "plugins.generic.pln.status.docs"
+msgstr ""
+"<a href=\"{$statusDocsUrl}\">حالات الإيداع موصوفة هنا</a> لـ PN من مشروع "
+"المعرفة العامة."
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultFailed"
+msgstr ""
+"فشل نشر ملف Atom إلى ملقم المنصة للإيداع {$depositId} (الخطأ: [{$error} - "
+"[{$result}]])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultSucceeded"
+msgstr "نجح نشر ملف Atom إلى ملقم المنصة للإيداع {$depositId}"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.postAtom"
+msgstr ""
+"نشر ملف Atom إلى ملقم المنصة للإيداع {$depositId} ({$objectType}: "
+"{$objectId}) (الحالة المحلية: [{$statusLocal}]، حالة المعالجة: "
+"[{$statusProcessing}]، حالة Lockss: [{$statusLockss}]) - (الرابط: [{$url}]، "
+"مسار Atom: [{$atomPath}]، الطريقة: [{$method}])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing"
+msgstr ""
+"محاولة إيداع المناقلة {$depositId} ({$objectType}: {$objectId}) (الحالة "
+"المحلية: [{$statusLocal}]، حالة المعالجة: [{$statusProcessing}]، حالة Lockss:"
+" [{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing"
+msgstr ""
+"محاولة إيداع الحزمة {$depositId} ({$objectType}: {$objectId}) (الحالة "
+"المحلية: [{$statusLocal}]، حالة المعالجة: [{$statusProcessing}]، حالة Lockss:"
+" [{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing.processingState"
+msgstr "معالجة الحالة الناتجة من {$depositId} -> ({$processingState})"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing"
+msgstr ""
+"محاولة تحديث الحالة لـ {$depositId} ({$objectType}: {$objectId}) (الحالة "
+"المحلية: [{$statusLocal}]، حالة المعالجة: [{$statusProcessing}]، حالة Lockss:"
+" [{$statusLockss}])"
+
+msgid "plugins.generic.pln.error.include.bagit"
+msgstr ""
+"مكتبة BagIt، والتي هي مضمنة في نظام المجلات المفتوحة، لا يمكن تحميلها، ربما "
+"بسبب غياب أحد المتطلبات المسبقة."
+
+msgid "plugins.generic.pln.status.packagingFailed"
+msgstr "فشل التعبئة"
+
+msgid "plugins.generic.pln.status.status"
+msgstr "الحالة"
+
+msgid "plugins.generic.pln.issueId"
+msgstr "رمز تعريف العدد"
+
+msgid "plugins.generic.pln.objectId"
+msgstr "رمز تعريف مُكون النوع"
