--- a/locale/cs_CZ/locale.po
+++ b/locale/cs_CZ/locale.po
@@ -1,15 +1,19 @@
+# Jiří Dlouhý <jiri.dlouhy@czp.cuni.cz>, 2022, 2023.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
+"PO-Revision-Date: 2023-01-29 20:48+0000\n"
+"Last-Translator: Jiří Dlouhý <jiri.dlouhy@czp.cuni.cz>\n"
+"Language-Team: Czech <http://translate.pkp.sfu.ca/projects/plugins/pln/cs_CZ/"
+">\n"
+"Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
-"PO-Revision-Date: 2020-03-03T23:08:22+00:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Weblate 4.13.1\n"
 
 msgid "plugins.generic.pln"
 msgstr "Plugin PKP PLN"
@@ -18,7 +22,7 @@ msgid "plugins.generic.pln.description"
 msgstr "Plugin PKP PN uloží váš publikovaný obsah do PKP veřejné sítě LOCKSS pro jejich ochranu."
 
 msgid "plugins.generic.pln.manager.setup.description"
-msgstr "<strong>PKP soukromá síť LOCKSS</strong><br /><br />Přečtěte si <a href=\"https://pkp.sfu.ca/pkp-lockss/\" target=\"_blank\">informace o PKP PLN</a> a vyplňte <a href=\"{$plnPluginURL}\">tento jednoduchý formulář</a>. Tato volba vám umožní zahrnutí vašeho časopisu do sítě Public Knowledge Project Private LOCKSS (PKP PLN)."
+msgstr "<strong>PKP soukromá síť LOCKSS</strong><br /><br />Přečtěte si <a href=\"https://pkp.sfu.ca/pkp-pn/\" target=\"_blank\">informace o PKP PLN</a> a vyplňte <a href=\"{$plnPluginURL}\">tento jednoduchý formulář</a>. Tato volba vám umožní zahrnutí vašeho časopisu do sítě Public Knowledge Project Private LOCKSS (PKP PLN)."
 
 msgid "plugins.generic.pln.settings"
 msgstr "Nastavení"
@@ -30,7 +34,9 @@ msgid "plugins.generic.pln.settings.terms_of_use"
 msgstr "Podmínky užití"
 
 msgid "plugins.generic.pln.settings.terms_of_use_help"
-msgstr "Než budete ukládat soubory do sítě, je třeba odsouhlasit všechny podmínky užití."
+msgstr ""
+"Jako správce časopisu v dobré víře přijímám a potvrzuji následující podmínky "
+"účasti v projektu Public Knowledge Project’s Preservation Network (PKP-PN):"
 
 msgid "plugins.generic.pln.settings.terms_of_use_agree"
 msgstr "Souhlas"
@@ -54,7 +60,7 @@ msgid "plugins.generic.pln.required.object_threshold"
 msgstr "Zvolte, prosím, práh ukládání souborů."
 
 msgid "plugins.generic.pln.required.terms_of_use_agreement"
-msgstr "Je třeba souhlas s podmínkami sítě, aby bylo možno ukládat do PLN"
+msgstr "K uložení do PKP PN je nutný souhlas s podmínkami používání sítě."
 
 msgid "plugins.generic.pln.objects.article"
 msgstr "Článek"
@@ -117,7 +123,7 @@ msgid "plugins.generic.pln.depositorTask.name"
 msgstr "Úkol PKP PN depozitoru"
 
 msgid "plugins.generic.pln.notifications.processing_for"
-msgstr "Zpracování uložení pro"
+msgstr "Zpracování uložení pro {$title}."
 
 msgid "plugins.generic.pln.notifications.pln_not_accepting"
 msgstr "PKP PN v tomto momentě nepřijímá uložení."
@@ -139,3 +145,214 @@ msgstr "Zásady používání PKP PN byly aktualizovány. Je vyžadován souhlas
 
 msgid "plugins.generic.pln.notifications.zip_missing"
 msgstr "Podpora ZipArchive musí být povolena, aby proběhlo zpracování."
+
+msgid "plugins.generic.pln.status.description.title"
+msgstr "Popis stavu"
+
+msgid "plugins.generic.pln.status.latestupdate"
+msgstr "Poslední aktualizace"
+
+msgid "plugins.generic.pln.status.warning"
+msgstr "Úplné zpracování zálohy může trvat několik dní."
+
+msgid "plugins.generic.pln.displayedstatus.error.description"
+msgstr "V procesu uložení zálohy došlo k chybě"
+
+msgid "plugins.generic.pln.displayedstatus.error"
+msgstr "Chyba"
+
+msgid "plugins.generic.pln.displayedstatus.completed.description"
+msgstr "Proces zálohy byl dokončen"
+
+msgid "plugins.generic.pln.displayedstatus.completed"
+msgstr "Dokončeno"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress.description"
+msgstr "Proces uložení zálohy probíhá"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress"
+msgstr "Probíhá"
+
+msgid "plugins.generic.pln.displayedstatus.pending.description"
+msgstr "Proces zálohy doposud nezačal"
+
+msgid "plugins.generic.pln.displayedstatus.pending"
+msgstr "Čekající"
+
+msgid "plugins.generic.plngateway.description"
+msgstr "Hlásí stav PKP PN a poslední názvy článků pro pracovní server."
+
+msgid "plugins.generic.plngateway.displayName"
+msgstr "Brána PN"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultFailed"
+msgstr ""
+"Odeslání souboru Atom na pracovní server k uložení {$depositId} selhalo "
+"(Chyba: [{$error} - [{$result}]])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultSucceeded"
+msgstr ""
+"Odeslání souboru Atom na pracovní server k uložení {$depositId} bylo úspěšné"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.postAtom"
+msgstr ""
+"Odeslání souboru Atom na pracovní server k uložení {$depositId} "
+"({$objectType}: {$objectId}) (Místní stav: [{$statusLocal}], Stav zpracování:"
+" [{$statusProcessing}], Stav Lockss: [{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing"
+msgstr ""
+"Snaha o přesun zálohy {$depositId} ({$objectType}: {$objectId}) (Místní stav:"
+" [{$statusLocal}], Stav zpracování: [{$statusProcessing}], Stav Lockss: "
+"[{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageSucceeded"
+msgstr "Balení zálohy {$depositId} bylo úspěšné"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageFailed"
+msgstr "Balení zálohy {$depositId} selhalo"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.error"
+msgstr ""
+"Při snaze o zabalení zálohy {$depositId} selhal plugin Native Import/Export"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing"
+msgstr ""
+"Snaha o zabalení zálohy {$depositId} ({$objectType}: {$objectId}) (Místní "
+"stav: [{$statusLocal}], Stav zpracování: [{$statusProcessing}], Stav Lockss: "
+"[{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing.processingState"
+msgstr "Stav zpracování pro {$depositId} -> ({$processingState})"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing"
+msgstr ""
+"Snaha o aktualizaci stavu {$depositId} ({$objectType}: {$objectId}) (Místní "
+"stav: [{$statusLocal}], Stav zpracování: [{$statusProcessing}], Stav Lockss: "
+"[{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits"
+msgstr "Odesílání zálohy do PKP PN."
+
+msgid "plugins.generic.pln.depositor.packagingdeposits"
+msgstr "Balení obsahu pro zálohu."
+
+msgid "plugins.generic.pln.depositor.newcontent"
+msgstr "Zpracování nového obsahu."
+
+msgid "plugins.generic.pln.depositor.updatedcontent"
+msgstr "Zpracování aktualizovaného obsahu."
+
+msgid "plugins.generic.pln.depositor.statusupdates"
+msgstr "Zpracování aktualizací stavu zálohy."
+
+msgid "plugins.generic.pln.error.handler.file.notfound"
+msgstr ""
+"Soubor zálohy nelze najít. Možná ještě nebyl zabalen nebo byl balíček "
+"odstraněn."
+
+msgid "plugins.generic.pln.error.handler.uuid.notfound"
+msgstr "Neexistuje záloha s požadovaným UUID."
+
+msgid "plugins.generic.pln.error.handler.uuid.invalid"
+msgstr "Požadované UUID není platné, nebo není správně formátované."
+
+msgid "plugins.generic.pln.error.depositor.export.issue.error"
+msgstr ""
+"Při exportu vydání došlo k chybě. Protokol chyb serveru může obsahovat více "
+"informací."
+
+msgid "plugins.generic.pln.error.depositor.export.articles.error"
+msgstr ""
+"Při exportu článků došlo k chybě. Protokol chyb serveru může obsahovat více "
+"informací."
+
+msgid "plugins.generic.pln.error.depositor.missingpackage"
+msgstr "Nelze nalézt soubor balíčku {$file}."
+
+msgid "plugins.generic.pln.error.http.swordstatement"
+msgstr ""
+"Při kontrole stavu zálohy vrátil server PN následující HTTP chybu {$error}."
+
+msgid "plugins.generic.pln.error.http.deposit"
+msgstr ""
+"Při pokusu o odeslání zálohy vrátil server PN následující HTTP chybu "
+"{$error}."
+
+msgid "plugins.generic.pln.error.http.servicedocument"
+msgstr ""
+"Při pokusu o získání servisního dokumentu vrátil server PN následující HTTP "
+"chybu {$error}."
+
+msgid "plugins.generic.pln.error.network.swordstatement"
+msgstr ""
+"Chyba sítě {$error} při připojení k PKP PN k získání aktualizace stavu pro "
+"zálohu."
+
+msgid "plugins.generic.pln.error.network.deposit"
+msgstr "Chyba sítě {$error} při připojení k PKP PN k odeslání zálohy."
+
+msgid "plugins.generic.pln.error.network.servicedocument"
+msgstr ""
+"Chyba sítě {$error} při připojení k PKP PN k získání servisního dokumentu."
+
+msgid "plugins.generic.pln.error.include.bagit"
+msgstr ""
+"Knihovnu BagIt, která je součástí OJS, nelze načíst, pravděpodobně kvůli "
+"některému chybějícímu požadavku pro běh této knihovny."
+
+msgid "plugins.generic.pln.notifications.issn_setting"
+msgstr ""
+"Než budete moci souhlasit s podmínkami služby, váš časopis musí mít číslo "
+"ISSN. Toto ISSN můžete zadat na stránce Nastavení časopisu. Po zadání ISSN "
+"časopisu se níže zobrazí podmínky služby."
+
+msgid "plugins.generic.pln.notifications.getting_servicedocument"
+msgstr "Získávám servisní dokument."
+
+msgid "plugins.generic.pln.status.packagingFailed"
+msgstr "Zabalení selhalo"
+
+msgid "plugins.generic.pln.status.agreement"
+msgstr "Dohoda"
+
+msgid "plugins.generic.pln.status.sent"
+msgstr "Odeslán do LOCKSS"
+
+msgid "plugins.generic.pln.status.validated"
+msgstr "Ověřený"
+
+msgid "plugins.generic.pln.status.new"
+msgstr "Nový"
+
+msgid "plugins.generic.pln.status.unknown"
+msgstr "Neznámý"
+
+msgid "plugins.generic.pln.status.confirmReset"
+msgstr ""
+"Opravdu chcete tento vklad resetovat? Bude znovu zabalen a znovu odeslán na "
+"zpracovatelský server."
+
+msgid "plugins.generic.pln.status.status"
+msgstr "Stav"
+
+msgid "plugins.generic.pln.status.docs"
+msgstr ""
+"Stavy úložiště PKP PN <a href=\"{$statusDocsUrl}\">jsou popsány zde</a>."
+
+msgid "plugins.generic.pln.issueId"
+msgstr "Id vydání"
+
+msgid "plugins.generic.pln.objectId"
+msgstr "Id typu objektu"
+
+msgid "plugins.generic.pln.settings.acron_required"
+msgstr ""
+"Plugin PKP PN vyžaduje buď plugin Acron, nebo nástroje pro pravidelné "
+"spouštění, například „cron“."
+
+msgid "plugins.generic.pln.disabled"
+msgstr "PKP PN plugin byl zakázán."
+
+msgid "plugins.generic.pln.enabled"
+msgstr "PKP PN plugin byl povolen."
