--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -1,15 +1,19 @@
+# Jonas Raoni Soares da Silva <weblate@raoni.org>, 2023.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
+"PO-Revision-Date: 2023-01-28 19:48+0000\n"
+"Last-Translator: Jonas Raoni Soares da Silva <weblate@raoni.org>\n"
+"Language-Team: English <http://translate.pkp.sfu.ca/projects/plugins/pln/en/>"
+"\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
-"PO-Revision-Date: 2020-03-03T23:08:22+00:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.13.1\n"
 
 msgid "plugins.generic.pln"
 msgstr "PKP PN Plugin"
@@ -30,7 +34,9 @@ msgid "plugins.generic.pln.settings"
 msgstr "Settings"
 
 msgid "plugins.generic.pln.settings.acron_required"
-msgstr "The PKP PN plugin requires either the Acron plugin or a periodic scheduling tools such as 'cron.'"
+msgstr ""
+"The PKP PN plugin requires either the Acron plugin or a periodic scheduling "
+"tools such as \"cron\"."
 
 msgid "plugins.generic.pln.settings.saved"
 msgstr "PKP PN settings saved."
