--- a/locale/it_IT/locale.po
+++ b/locale/it_IT/locale.po
@@ -1,15 +1,19 @@
+# Fulvio Delle Donne <fulviodelledonne@libero.it>, 2022.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
+"PO-Revision-Date: 2022-08-09 12:25+0000\n"
+"Last-Translator: Fulvio Delle Donne <fulviodelledonne@libero.it>\n"
+"Language-Team: Italian <http://translate.pkp.sfu.ca/projects/plugins/pln/"
+"it_IT/>\n"
+"Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
-"PO-Revision-Date: 2020-03-03T23:08:22+00:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.13.1\n"
 
 msgid "plugins.generic.pln"
 msgstr "Plugin PKP PLN"
@@ -18,7 +22,7 @@ msgid "plugins.generic.pln.description"
 msgstr "Il plugin PKP PN cura il versamento dei contenuti pubblicati dalla rivista nella PKP Private LOCKSS Network a fini di conservazione a lungo termine."
 
 msgid "plugins.generic.pln.manager.setup.description"
-msgstr "<strong>PKP Private LOCKSS Network</strong><br /><br />Leggi la <a href=\"https://pkp.sfu.ca/pkp-lockss/\" target=\"_blank\">panoramica sulla PKP PLN</a> e completa <a href=\"{$plnPluginURL}\">questo semplice modulo</a>. Questa opzione permette l'inclusione della tua rivista nella Public Knowledge Project Private LOCKSS Network (PKP PLN)."
+msgstr "<strong>PKP Private LOCKSS Network</strong><br /><br />Leggi la <a href=\"https://pkp.sfu.ca/pkp-pn/\" target=\"_blank\">panoramica sulla PKP PLN</a> e completa <a href=\"{$plnPluginURL}\">questo semplice modulo</a>. Questa opzione permette l'inclusione della tua rivista nella Public Knowledge Project Private LOCKSS Network (PKP PLN)."
 
 msgid "plugins.generic.pln.enabled"
 msgstr "Il plugin PKP PN è stato abilitato."
@@ -69,7 +73,7 @@ msgid "plugins.generic.pln.objects.article"
 msgstr "Articoli"
 
 msgid "plugins.generic.pln.objects.issue"
-msgstr "Fascicoli"
+msgstr "Fascicolo"
 
 msgid "plugins.generic.pln.status.network_status"
 msgstr "Stato della rete: {$networkStatusMessage}"
@@ -129,7 +133,7 @@ msgid "plugins.generic.pln.status.validated"
 msgstr "Validato"
 
 msgid "plugins.generic.pln.status.sent"
-msgstr "Inviato a  LOCKSS"
+msgstr "Inviato a LOCKSS"
 
 msgid "plugins.generic.pln.status.syncing"
 msgstr "Sincronizzazione in corso"
@@ -153,7 +157,7 @@ msgid "plugins.generic.pln.notifications.processing_for"
 msgstr "Versamento in corso per {$title}."
 
 msgid "plugins.generic.pln.notifications.getting_servicedocument"
-msgstr "Getting service document."
+msgstr "Ricevimento del service document."
 
 msgid "plugins.generic.pln.notifications.pln_not_accepting"
 msgstr "La PKP PN al momento non accetta versamenti."
@@ -183,7 +187,9 @@ msgid "plugins.generic.pln.error.network.servicedocument"
 msgstr "Errore di rete {$error} connettendosi alla PKP PN per ricevere il service document."
 
 msgid "plugins.generic.pln.error.network.deposit"
-msgstr "Errore di rete {$error} connettendosi alla PKP PN per la trasmissione del versamento"
+msgstr ""
+"Errore di rete {$error} connettendosi alla PKP PN per la trasmissione del "
+"versamento."
 
 msgid "plugins.generic.pln.error.network.swordstatement"
 msgstr "Errore di rete {$error} connettendosi alla PKP PN per ricevere gli aggiornamenti sullo stato del versamento."
@@ -244,3 +250,98 @@ msgstr "Blocco \"Conservato in\""
 
 msgid "plugins.generic.plnblock.description"
 msgstr "Questo plugin genera il blocco \"Conservato in\"."
+
+msgid "plugins.generic.pln.status.description.title"
+msgstr "Descrizione dello stato"
+
+msgid "plugins.generic.pln.status.latestupdate"
+msgstr "Ultimo aggiornamento"
+
+msgid "plugins.generic.pln.status.warning"
+msgstr ""
+"Il completamento del processo di deposito può richiedere diversi giorni."
+
+msgid "plugins.generic.pln.displayedstatus.error.description"
+msgstr "Si è verificato un errore durante il processo di deposito"
+
+msgid "plugins.generic.pln.displayedstatus.error"
+msgstr "Errore"
+
+msgid "plugins.generic.pln.displayedstatus.completed.description"
+msgstr "Il processo di deposito è completato"
+
+msgid "plugins.generic.pln.displayedstatus.completed"
+msgstr "Completato"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress.description"
+msgstr "Il processo di deposito è in corso"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress"
+msgstr "In corso"
+
+msgid "plugins.generic.pln.displayedstatus.pending.description"
+msgstr "Il processo di deposito non è iniziato"
+
+msgid "plugins.generic.pln.displayedstatus.pending"
+msgstr "In attesa"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultFailed"
+msgstr ""
+"Invio fallito del file Atom al server di staging per il deposito {$ "
+"depositId} (Errore: [{$error} - [{$result}]])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultSucceeded"
+msgstr ""
+"Invio riuscito del file Atom al server di staging per il deposito {$ "
+"depositId}"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.postAtom"
+msgstr ""
+"Invio del file Atom al server di staging per il deposito {$ depositId} ("
+"stato locale: [{$ statusLocal}], stato di elaborazione: [{$ "
+"statusProcessing}], stato Lockss: [{$ statusLockss}]) - (Url: [{ $ url}], "
+"AtomPath: [{$ atomPath}], Metodo: [{$ method}])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing"
+msgstr ""
+"Tentativo di trasferimento del deposito {$ depositId} ({$ objectType}: {$ "
+"objectId}) (stato locale: [{$ statusLocal}], stato di elaborazione: [{$ "
+"statusProcessing}], stato Lockss: [{$ statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageSucceeded"
+msgstr "Impacchettamento riuscito per il deposito {$ depositId}"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageFailed"
+msgstr "Impacchettamento fallito per il deposito {$ depositId}"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.error"
+msgstr ""
+"Il plug-in di importazione/esportazione nativo ha fallito l'impacchettamento "
+"per il deposito {$ depositId}"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing"
+msgstr ""
+"Tentativo di deposito del pacchetto {$ depositId} ({$ objectType}: {$ "
+"objectId}) (stato locale: [{$ statusLocal}], stato di elaborazione: [{$ "
+"statusProcessing}], stato Lockss: [{$ statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing.processingState"
+msgstr "Stato di processo ottenuto per {$depositId} -> ({$processingState})"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing"
+msgstr ""
+"Tentativo di aggiornamento dello stato per {$ depositId} ({$ objectType}: {$ "
+"objectId}) (stato locale: [{$ statusLocal}], stato di elaborazione: [{$ "
+"statusProcessing}], stato Lockss: [{$ statusLockss}])"
+
+msgid "plugins.generic.pln.status.packagingFailed"
+msgstr "Fallimento dell'impacchettamento"
+
+msgid "plugins.generic.pln.status.status"
+msgstr "Stato"
+
+msgid "plugins.generic.pln.issueId"
+msgstr "Id fascicolo"
+
+msgid "plugins.generic.pln.objectId"
+msgstr "Id del tipo di oggetto"
