--- a/locale/pt_BR/locale.po
+++ b/locale/pt_BR/locale.po
@@ -1,24 +1,31 @@
+# Jonas Raoni Soares da Silva <weblate@raoni.org>, 2023.
+# Diego José Macêdo <diegojmacedo@gmail.com>, 2023.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
+"PO-Revision-Date: 2023-02-01 16:48+0000\n"
+"Last-Translator: Diego José Macêdo <diegojmacedo@gmail.com>\n"
+"Language-Team: Portuguese (Brazil) <http://translate.pkp.sfu.ca/projects/"
+"plugins/pln/pt_BR/>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
-"PO-Revision-Date: 2020-03-03T23:08:22+00:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 4.13.1\n"
 
 msgid "plugins.generic.pln"
 msgstr "Plugin PKP PN do PKP"
 
 msgid "plugins.generic.pln.description"
-msgstr "O plugin PKP PN do PKP  realizará o deposito do conteúdo preservado na Rede Privada LOCKSS da PKP para preservação."
+msgstr ""
+"O plugin PKP PN do PKP realizará o deposito do conteúdo preservado na Rede "
+"Privada LOCKSS da PKP para preservação."
 
 msgid "plugins.generic.pln.manager.setup.description"
-msgstr "<strong>Rede Privada LOCKSS da PKP</strong><br /><br />Por favor, leia o <a href=\"https://pkp.sfu.ca/pkp-lockss/\" target=\"_blank\">resumo da PKP PN (Rede Privada LOCKSS) da PKP</a> e preencha <a href=\"{$plnPluginURL}\">este formulário</a>. Esta opção permitirá a inclusão de seu periódico no Public Knowledge Project Private LOCKSS Network (PLN do PKP)."
+msgstr "<strong>Rede Privada LOCKSS da PKP</strong><br /><br />Por favor, leia o <a href=\"https://pkp.sfu.ca/pkp-pn/\" target=\"_blank\">resumo da PKP PN (Rede Privada LOCKSS) da PKP</a> e preencha <a href=\"{$plnPluginURL}\">este formulário</a>. Esta opção permitirá a inclusão de seu periódico no Public Knowledge Project Private LOCKSS Network (PLN do PKP)."
 
 msgid "plugins.generic.pln.enabled"
 msgstr "O plugin PKP PN do PKP foi habilitado."
@@ -30,7 +37,9 @@ msgid "plugins.generic.pln.settings"
 msgstr "Configurações"
 
 msgid "plugins.generic.pln.settings.acron_required"
-msgstr "O plugin PKP PN exige o plugin Acron ou outra forma de agendamento periódico de ações como o 'cron'."
+msgstr ""
+"O plugin PKP PN exige o plugin Acron ou outra forma de agendamento periódico "
+"de ações como o \"cron\"."
 
 msgid "plugins.generic.pln.settings.saved"
 msgstr "PLN do PKP configurações salvas."
@@ -235,3 +244,98 @@ msgstr "Gateway da PLN"
 
 msgid "plugins.generic.plngateway.description"
 msgstr "Reporta situação da PKP PN e títulos de artigos recentes para o servidor de preprocessamento."
+
+msgid "plugins.generic.pln.status.description.title"
+msgstr "Descrição do status"
+
+msgid "plugins.generic.pln.status.latestupdate"
+msgstr "Última atualização"
+
+msgid "plugins.generic.pln.status.warning"
+msgstr "Pode levar alguns dias para um depósito seja totalmente processado."
+
+msgid "plugins.generic.pln.displayedstatus.error.description"
+msgstr "Ocorreu um erro em relação ao processo de depósito"
+
+msgid "plugins.generic.pln.displayedstatus.error"
+msgstr "Erro"
+
+msgid "plugins.generic.pln.displayedstatus.completed.description"
+msgstr "O processo de depósito está concluído"
+
+msgid "plugins.generic.pln.displayedstatus.completed"
+msgstr "Concluído"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress.description"
+msgstr "O processo de depósito está em andamento"
+
+msgid "plugins.generic.pln.displayedstatus.inprogress"
+msgstr "Em andamento"
+
+msgid "plugins.generic.pln.displayedstatus.pending.description"
+msgstr "O processo de depósito ainda não foi iniciado"
+
+msgid "plugins.generic.pln.displayedstatus.pending"
+msgstr "Pendente"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultFailed"
+msgstr ""
+"Falha ao enviar o arquivo Atom no servidor de teste para o depósito "
+"{$depositId} (Erro: [{$error} - [{$result}]])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.resultSucceeded"
+msgstr ""
+"O envio do arquivo Atom para o servidor de teste para o depósito {$depositId}"
+" foi bem-sucedido"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing.postAtom"
+msgstr ""
+"Postando o arquivo Atom no servidor de teste para depósito {$depositId} ("
+"Status local: [{$statusLocal}], Status de processamento: "
+"[{$statusProcessing}], Status de Lockss : [{$statusLockss}]) - (Url: [{$url}]"
+", AtomPath: [{$atomPath}], Método: [{$method}])"
+
+msgid "plugins.generic.pln.depositor.transferringdeposits.processing"
+msgstr ""
+"Tentando transferir o depósito {$depositId} ({$objectType}: {$objectId}) ("
+"Status local: [{$statusLocal}], Status de processamento: "
+"[{$statusProcessing}], Status Lockss: [{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageSucceeded"
+msgstr "O empacotamento para o depósito {$depositId} foi bem-sucedido"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.packageFailed"
+msgstr "O empacotamento para o depósito {$depositId} falhou"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing.error"
+msgstr ""
+"Plug-in nativo de importação/exportação falhou para o depósito {$depositId}, "
+"ao tentar empacotá-lo"
+
+msgid "plugins.generic.pln.depositor.packagingdeposits.processing"
+msgstr ""
+"Tentando depósito de pacote {$depositId} ({$objectType}: {$objectId}) ("
+"Status local: [{$statusLocal}], Status de processamento: "
+"[{$statusProcessing}], Status Lockss: [{$statusLockss}])"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing.processingState"
+msgstr ""
+"Status de processamento obtido para {$depositId} -> ({$processingState})"
+
+msgid "plugins.generic.pln.depositor.statusupdates.processing"
+msgstr ""
+"Tentando atualização de status para {$depositId} ({$objectType}: {$objectId})"
+" (Status local: [{$statusLocal}], Status de processamento: "
+"[{$statusProcessing}], Status Lockss: [{$statusLockss}])"
+
+msgid "plugins.generic.pln.status.packagingFailed"
+msgstr "Falha no empacotamento"
+
+msgid "plugins.generic.pln.status.status"
+msgstr "Status"
+
+msgid "plugins.generic.pln.issueId"
+msgstr "Id da edição"
+
+msgid "plugins.generic.pln.objectId"
+msgstr "Tipo de Id do Objeto"
