--- a/locale/ru/locale.po
+++ b/locale/ru/locale.po
@@ -22,7 +22,7 @@ msgid "plugins.generic.pln.description"
 msgstr "Плагин «PKP PLN» отправляет ваш опубликованный контент для депонирования в Частную сеть LOCKSS от PKP."
 
 msgid "plugins.generic.pln.manager.setup.description"
-msgstr "<strong>Частная сеть LOCKSS от PKP</strong><br /><br />Пожалуйста, прочитайте <a href=\"https://pkp.sfu.ca/pkp-lockss/\" target=\"_blank\">обзор PKP PLN</a> и заполните <a href=\"{$plnPluginURL}\">эту простую форму</a>. Эта настройка позволит включить ваш журналв Частную сеть LOCKSS, созданную Public Knowledge Project (PKP PLN)."
+msgstr "<strong>Частная сеть LOCKSS от PKP</strong><br /><br />Пожалуйста, прочитайте <a href=\"https://pkp.sfu.ca/pkp-pn/\" target=\"_blank\">обзор PKP PLN</a> и заполните <a href=\"{$plnPluginURL}\">эту простую форму</a>. Эта настройка позволит включить ваш журналв Частную сеть LOCKSS, созданную Public Knowledge Project (PKP PLN)."
 
 msgid "plugins.generic.pln.enabled"
 msgstr "Плагин «PKP PLN» был включен."
