--- a/locale/ar_IQ/locale.po
+++ b/locale/ar_IQ/locale.po
@@ -198,13 +198,16 @@ msgid "plugins.generic.pln.error.network.swordstatement"
 msgstr "خطأ ما في الشبكة {$error} عند محاولة الاتصال بـ PKP PN للحصول على تحديث لوضعية الإيداع."
 
 msgid "plugins.generic.pln.error.http.servicedocument"
-msgstr "أعاد ملقم PKP PN خطأ بترميز HTTP مفاده: {$error} عند محاولة الحصول على مستند الخدمة."
+msgstr "أعاد ملقم PKP PN خطأ بترميز HTTP مفاده: {$error} عند محاولة الحصول على مستند الخدمة.\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.http.deposit"
-msgstr "أعاد ملقم PKP PN خطأ بترميز HTTP مفاده: {$error} عند إرسال الإيداع."
+msgstr "أعاد ملقم PKP PN خطأ بترميز HTTP مفاده: {$error} عند إرسال الإيداع.\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.http.swordstatement"
-msgstr "أعاد ملقم PKP PN خطأ من نوع HTTP {$error} عند التحقق من وضعية الإيداع."
+msgstr "أعاد ملقم PKP PN خطأ من نوع HTTP {$error} عند التحقق من وضعية الإيداع.\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.depositor.missingpackage"
 msgstr "تعذر العثور على ملف حزمة {$file}."
