--- a/locale/hy_AM/locale.po
+++ b/locale/hy_AM/locale.po
@@ -143,13 +143,16 @@ msgid "plugins.generic.pln.error.depositor.missingpackage"
 msgstr "Հնարավոր չէ գտնել փաթեթի նիշքը՝ {$file}:"
 
 msgid "plugins.generic.pln.error.http.swordstatement"
-msgstr "PN սերվերը վերադարձրեց HTTP սխալ {$error} ավանդի կարգավիճակը ստուգելիս:"
+msgstr "PN սերվերը վերադարձրեց HTTP սխալ {$error} ավանդի կարգավիճակը ստուգելիս:\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.http.deposit"
-msgstr "PN սերվերը վերադարձրեց HTTP սխալ {$error} ավանդն ուղարկելիս:"
+msgstr "PN սերվերը վերադարձրեց HTTP սխալ {$error} ավանդն ուղարկելիս:\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.http.servicedocument"
-msgstr ""
+msgstr "\n"
+"{$message}"
 "PN սերվերը վերադարձրեց HTTP սխալ {$error}, երբ փորձում էր ստանալ ծառայողական "
 "փաստաթուղթը:"
 
