--- a/locale/mk_MK/locale.po
+++ b/locale/mk_MK/locale.po
@@ -143,7 +143,8 @@ msgid "plugins.generic.pln.error.depositor.missingpackage"
 msgstr "Не е пронајдена спакуваната датотека {$file}."
 
 msgid "plugins.generic.pln.error.http.swordstatement"
-msgstr ""
+msgstr "\n"
+"{$message}"
 "PN серверот врати HTTP грешка {$error} при проверка на статусот на депозит."
 
 msgid "plugins.generic.pln.error.network.swordstatement"
@@ -162,10 +163,12 @@ msgstr ""
 "документот за услуги."
 
 msgid "plugins.generic.pln.error.http.deposit"
-msgstr "PN серверот врати HTTP грешка {$error} при испраќање на депозитот."
+msgstr "PN серверот врати HTTP грешка {$error} при испраќање на депозитот.\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.http.servicedocument"
-msgstr ""
+msgstr "\n"
+"{$message}"
 "PN серверот врати HTTP грешка {$error} при обидување да го добие докуметот "
 "за услуги."
 
